--- a/index.html
+++ b/index.html
@@ -8,19 +8,17 @@
             rel="stylesheet"
             href="./bootstrap-5.3.0-alpha3-dist/css/bootstrap.css"
         />
-        <link rel="stylesheet" href="./css/style.css" />
     </head>
 
     <body>
         <div id="app">
             <div class="container-fluid p-0">
-                <header
-                    class="header p-3 bg-dark d-flex justify-content-between align-items-center"
-                >
+                <header class="header p-3 bg-dark d-flex justify-content-between align-items-center">
                     <div class="logo">
-                        <h1 class="text-bg-info text-dark rounded-circle">
-                            mMm
-                        </h1>
+                        <img src="../public/images/logo.png" 
+                        alt="There is nothing here yet!"
+                        class="w-50 p-3"
+                        />
                     </div>
 
                     <nav class="nav col-5 d-flex justify-content-between">
@@ -52,90 +50,110 @@
                         <div
                             class="col-sm-2 col-lg-4 proudct d-flex flex-column"
                         >
-                            <div
-                                class="img w-75 bg-success m-auto"
-                                style="height: 250px"
-                            ></div>
 
-                            <h2 class="text-info text-center">Samsung</h2>
+                        <div class="d-flex justify-content-center">
+                            <img src="https://cdn.samsungshop.com.ua/products/5157/images/26318/156717-large-webp.webp" 
+                            alt=""
+                            class="img w-160 m-auto"
+                            style="height: 250px"
+                            />
+                        </div>
+
+                            <h2 class="text-info text-center">Смартфон Samsung Galaxy S22 S901B 8GB/256GB Phantom Black</h2>
 
                             <p class="description">
-                                Lorem ipsum dolor sit amet consectetur
-                                adipisicing elit.
+                                При покупке смартфона Galaxy Flip4 получите в подарок 
+                                смартчасы Galaxy Watch5. Получить подарок можно при покупке 
+                                смартфона по полной стоимости.
                             </p>
 
                             <p class="description">
-                                Dolores, illo. Fugit dolorum commodi repellat
-                                molestiae, voluptatibus tenetur quae eum
-                                blanditiis, veritatis natus cumque, ut magni
-                                odit minima non repellendus quibusdam alias
-                                cupiditate.
+                                На этот товар распространяется бесплатная экспресс-доставка за 2 часа по Киеву.
                             </p>
 
                             <div
                                 class="btn-wrapper d-flex justify-content-center"
                             >
-                                <button class="btn btn-primary w-50">
+
+                                <p class="p-3 text-decoration-line-through">32 999</p>
+
+                                <p class="p-3">29 699 грн</p>
+
+                                <button class="btn btn-primary w-49"
+                                style="height: 30px"
+                                >
                                     Buy
                                 </button>
                             </div>
                         </div>
 
                         <div class="col-4 proudct d-flex flex-column">
-                            <div
-                                class="img w-75 bg-success m-auto"
+                            <div class="d-flex justify-content-center">
+                                <img src="https://cdn.samsungshop.com.ua/products/5508/images/29014/MS8iQpMn6MJ6ogiW61IJ4A5GWaAxpf7V2wJeE955-large-webp.webp" 
+                                alt=""
+                                class="img w-160 m-auto"
                                 style="height: 250px"
-                            ></div>
+                                />
+                            </div>
 
-                            <h2 class="text-info text-center">Samsung</h2>
+                            <h2 class="text-info text-center">Смартфон Samsung Galaxy Fold4 F936B 12GB/256GB Phantom Black</h2>
 
                             <p class="description">
-                                Lorem ipsum dolor sit amet consectetur
-                                adipisicing elit.
+                                При покупке смартфона Galaxy Flip4 получите в подарок 
+                                смартчасы Galaxy Watch5. Получить подарок можно при покупке 
+                                смартфона по полной стоимости.
                             </p>
 
                             <p class="description">
-                                Dolores, illo. Fugit dolorum commodi repellat
-                                molestiae, voluptatibus tenetur quae eum
-                                blanditiis, veritatis natus cumque, ut magni
-                                odit minima non repellendus quibusdam alias
-                                cupiditate.
+                                На этот товар распространяется бесплатная экспресс-доставка за 2 часа по Киеву.
                             </p>
 
                             <div
                                 class="btn-wrapper d-flex justify-content-center"
                             >
-                                <button class="btn btn-primary w-50">
+                                <p class="p-3 text-decoration-line-through">67 499</p>
+
+                                <p class="p-3">60 499 грн</p>
+
+                                <button class="btn btn-primary w-49"
+                                style="height: 30px"
+                                >
                                     Buy
                                 </button>
                             </div>
                         </div>
 
                         <div class="col-4 proudct d-flex flex-column">
-                            <div
-                                class="img w-75 bg-success m-auto"
+                            <div class="d-flex justify-content-center">
+                                <img src="https://cdn.samsungshop.com.ua/products/5598/images/30043/161189-large-webp.webp" 
+                                alt=""
+                                class="img w-160 m-auto"
                                 style="height: 250px"
-                            ></div>
+                                />
+                            </div>
 
-                            <h2 class="text-info text-center">Samsung</h2>
+                            <h2 class="text-info text-center">Смартфон Samsung Galaxy S22 S901B 8GB/128GB Light Violet</h2>
 
                             <p class="description">
-                                Lorem ipsum dolor sit amet consectetur
-                                adipisicing elit.
+                                При покупке смартфона Galaxy Flip4 получите в подарок 
+                                смартчасы Galaxy Watch5. Получить подарок можно при покупке 
+                                смартфона по полной стоимости.
                             </p>
 
                             <p class="description">
-                                Dolores, illo. Fugit dolorum commodi repellat
-                                molestiae, voluptatibus tenetur quae eum
-                                blanditiis, veritatis natus cumque, ut magni
-                                odit minima non repellendus quibusdam alias
-                                cupiditate.
+                                На этот товар распространяется бесплатная экспресс-доставка за 2 часа по Киеву.
                             </p>
 
                             <div
                                 class="btn-wrapper d-flex justify-content-center"
                             >
-                                <button class="btn btn-primary w-50">
+                                <p class="p-3 text-decoration-line-through">30 999</p>
+
+                                <p class="p-3">27 899 грн</p>
+
+                                <button class="btn btn-primary w-49"
+                                style="height: 30px"
+                                >
                                     Buy
                                 </button>
                             </div>
@@ -144,66 +162,110 @@
 
                     <div class="row mt-5">
                         <div class="col-6 proudct d-flex flex-column">
-                            <div
-                                class="img w-75 bg-success m-auto"
+                            <div class="d-flex justify-content-center">
+                                <img src="https://cdn.samsungshop.com.ua/products/7478/cover/92534/[global-version]-sm-s916_galaxys23plus_front_phantomblack_221122---large-webp.webp" 
+                                alt=""
+                                class="img w-160 m-auto"
                                 style="height: 250px"
-                            ></div>
+                                />
+                            </div>
 
-                            <h2 class="text-info text-center">Samsung</h2>
+                            <h2 class="text-info text-center">Смартфон Samsung Galaxy S23 S911B 8GB/128GB Black</h2>
 
                             <p class="description">
-                                Lorem ipsum dolor sit amet consectetur
-                                adipisicing elit.
+                                При покупке смартфона Galaxy Flip4 получите в подарок 
+                                смартчасы Galaxy Watch5. Получить подарок можно при покупке 
+                                смартфона по полной стоимости.
                             </p>
 
                             <p class="description">
-                                Dolores, illo. Fugit dolorum commodi repellat
-                                molestiae, voluptatibus tenetur quae eum
-                                blanditiis, veritatis natus cumque, ut magni
-                                odit minima non repellendus quibusdam alias
-                                cupiditate.
+                                На этот товар распространяется бесплатная экспресс-доставка за 2 часа по Киеву.
                             </p>
 
                             <div
                                 class="btn-wrapper d-flex justify-content-center"
                             >
-                                <button class="btn btn-primary w-50">
+                                <p class="p-3">39 999 грн</p>
+
+                                <button class="btn btn-primary w-49"
+                                style="height: 30px"
+                                >
                                     Buy
                                 </button>
                             </div>
                         </div>
 
                         <div class="col-6 proudct d-flex flex-column">
-                            <div
-                                class="img w-75 bg-success m-auto"
+                            <div class="d-flex justify-content-center">
+                                <img src="https://cdn.samsungshop.com.ua/products/5510/cover/89567/279915127-removebg-preview-large-webp.webp" 
+                                alt=""
+                                class="img w-160 m-auto"
                                 style="height: 250px"
-                            ></div>
+                                />
+                            </div>
 
-                            <h2 class="text-info text-center">Samsung</h2>
+                            <h2 class="text-info text-center">Смартфон Samsung Galaxy Flip4 F721B 8GB/256GB Bora Purple</h2>
 
                             <p class="description">
-                                Lorem ipsum dolor sit amet consectetur
-                                adipisicing elit.
+                                При покупке смартфона Galaxy Flip4 получите в подарок 
+                                смартчасы Galaxy Watch5. Получить подарок можно при покупке 
+                                смартфона по полной стоимости.
                             </p>
 
                             <p class="description">
-                                Dolores, illo. Fugit dolorum commodi repellat
-                                molestiae, voluptatibus tenetur quae eum
-                                blanditiis, veritatis natus cumque, ut magni
-                                odit minima non repellendus quibusdam alias
-                                cupiditate.
+                                На этот товар распространяется бесплатная экспресс-доставка за 2 часа по Киеву.
                             </p>
 
                             <div
                                 class="btn-wrapper d-flex justify-content-center"
                             >
-                                <button class="btn btn-primary w-50">
+                                <p class="p-3 text-decoration-line-through">42 999</p>
+
+                                <p class="p-3">38 699 грн</p>
+
+                                <button class="btn btn-primary w-49"
+                                style="height: 30px"
+                                >
                                     Buy
                                 </button>
                             </div>
                         </div>
                     </div>
                 </div>
+                <footer class="footer">
+                    <h2 class="p-5 fw-bold">Samsung</h2>
+
+                    <div class="info d-flex flex-between justify-content-between p-5">
+                        <div class="info__information paragraph">
+                            <div class="fw-bold">Contacts</div>
+                            <div>+380 (67) 645-06-10</div>
+                            <div>Андрей Усенко</div>
+                        </div>
+            
+                        <div class="info__address paragraph">
+                            <div class="fw-bold">Address</div>
+                            <div>Ukraine, Dnipro</div>
+                            <div>887-549-00-15</div>
+                            <div>887-549-00-14</div>
+                        </div>
+            
+                        <div class="info__get-in-touch paragraph">
+                            <div class="fw-bold">Email</div>
+
+                            <div class="d-flex flex-between">
+                                <p>parostok.net.ua@gmail.com</p>
+                            </div>
+                    </div>
+                </footer>
+
+                <div class="d-flex flex-between p-5">
+                    <div>Privacy Policy</div>
+                    <div>Company Data</div>
+                    <div>All Cookies</div>
+                    <div>Rules</div>
+                </div>
+
+                <span class="p-5">© 2022 All rights reserved.</span>
             </div>
         </div>
     </body>
